FIX: no scrollbar in zoomed mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body {
     font-family: 'Inter', sans-serif;
     color: var(--primary-text-color);
     height: 100vh;
-    overflow: hidden;
+    overflow-y: scroll;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
